removed business link in favor of nmu one

--- a/fearless-boilerplate.html
+++ b/fearless-boilerplate.html
@@ -48,7 +48,7 @@
 	<script src="https://www.nmu.edu/sites/all/themes/zen_nmu/js/script.js?v1.0"></script>
 	<script src="https://www.nmu.edu/sites/all/themes/zen_nmu/js/vendor/bootstrap.js?v1.0""></script>
 	<!--[if lt IE 9]>
-		<script src="/business/sites/all/themes/zen/js/html5.js?v1.0"></script>
+		<script src="https://www.nmu.edu/sites/all/themes/zen/js/html5.js?v1.0"></script>
 	<![endif]-->
 
 </head>
