--- a/fearless-boilerplate.html
+++ b/fearless-boilerplate.html
@@ -51,6 +51,16 @@
 		<script src="https://www.nmu.edu/sites/all/themes/zen/js/html5.js?v1.0"></script>
 	<![endif]-->
 
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		ga('create', 'UA-27629684-6', 'auto');
+		ga('send', 'pageview');
+	</script>
+
 </head>
 
 <body class="html not-front not-logged-in one-sidebar sidebar-first page-node page-node- node-type-fearless-internal-page section-node" >
