Added NMU logo to branding section

--- a/fearless-boilerplate.html
+++ b/fearless-boilerplate.html
@@ -173,8 +173,9 @@
 
 			<div class="region region-branding">
 				<div id="block-block-55" class="block block-block first last odd">
-					<div class="branding-one allcaps">Northern</div>
-					<div class="branding-two allcaps">Michigan University</div>
+					<div class="branding-logo">
+						<img src="https://www.nmu.edu/Webb/Images/NMULogos/NMU_G_Horizontal_Transparent.png" style="width:500px; height:68px;" alt="NMU Logo" title="Northern Michigan University">
+					</div>
 				</div>
 			</div><!-- /.region-branding -->
 
