--- a/fearless-boilerplate.html
+++ b/fearless-boilerplate.html
@@ -174,7 +174,7 @@
 			<div class="region region-branding">
 				<div id="block-block-55" class="block block-block first last odd">
 					<div class="branding-logo">
-						<a href="http://www.nmu.edu"><img src="https://www.nmu.edu/Webb/Images/NMULogos/NMU_G_Horizontal_Transparent.png" style="width:500px; height:68px;" alt="NMU Logo" title="Northern Michigan University">
+						<a href="http://www.nmu.edu"><img src="https://www.nmu.edu/Webb/Images/NMULogos/NMU_G_Horizontal_Transparent.png" style="width:500px; height:68px;" alt="NMU Logo" title="Northern Michigan University"></a>
 					</div>
 				</div>
 			</div><!-- /.region-branding -->
