--- a/fearless-boilerplate.html
+++ b/fearless-boilerplate.html
@@ -275,7 +275,7 @@
 												<div class="row">
 													<div class="col-sm-3">
 														<ul class="list-unstyled" role="menu">
-															<li><a href="//www.nmu.edu//it.nmu.edu/">Academic Computing</a></li>
+															<li><a href="//it.nmu.edu/">Academic Computing</a></li>
 															<li><a href="//www.nmu.edu/bulletin">Course Catalog</a></li>
 															<li><a href="https://educat.nmu.edu">EduCat</a></li>
 															<li><a href="//www.nmu.edu/gradbulletin">Graduate Course Catalog</a></li>
