--- a/fearless-boilerplate.html
+++ b/fearless-boilerplate.html
@@ -559,7 +559,7 @@
 						<ul>
 							<li><a href="mailto:admiss@nmu.edu">Admissions Questions</a></li>
 							<li><a href="//www.nmu.edu/contactus">Contact Us</a></li>
-							<li><a href="//www.nmu.edu/communicationsandmarketing/PrivacyStatement">Privacy Statement</a></li>
+							<li><a href="//www.nmu.edu/mc/PrivacyStatement">Privacy Statement</a></li>
 							<li><a href="//www.nmu.edu/emergency">Emergency Information</a></li>
 						</ul>
 					</nav>
