--- a/fearless-boilerplate-nonav.html
+++ b/fearless-boilerplate-nonav.html
@@ -8,7 +8,7 @@
 <head>
 
 	<meta charset="utf-8" />
-	<link rel="shortcut icon" href="http://www.nmu.edu/favicon.ico" type="image/vnd.microsoft.icon" />
+	<link rel="shortcut icon" href="https://www.nmu.edu/favicon.ico" type="image/vnd.microsoft.icon" />
 	<link rel="shortlink" href="[[TO BE PROVIDED]]" />
 	<link rel="canonical" href="[[TO BE PROVIDED]]" />
 
@@ -45,10 +45,10 @@
 	<script src="https://www.nmu.edu/sites/all/modules/jquery_update/replace/misc/1.9/jquery.ba-bbq.min.js?v=1.2.1"></script>
 	<script src="https://www.nmu.edu/sites/all/modules/jquery_update/replace/misc/1.9/overlay-parent.js?v=1.0"></script>
 	<script src="https://www.nmu.edu/sites/all/modules/jquery_update/replace/ui/external/jquery.cookie.js?v=67fb34f6a866c40d0570"></script>
-	<script src="https://www.nmu.edu/sites/all/themes/zen_nmu/js/script.js?v1.0"></script>
-	<script src="https://www.nmu.edu/sites/all/themes/zen_nmu/js/vendor/bootstrap.js?v1.0""></script>
+	<script src="https://www.nmu.edu/sites/all/themes/zen_nmu/js/script.min.js?v1.0"></script>
+	<script src="https://www.nmu.edu/sites/all/themes/zen_nmu/js/vendor/bootstrap.js?v1.0"></script>
 	<!--[if lt IE 9]>
-		<script src="/business/sites/all/themes/zen/js/html5.js?v1.0"></script>
+		<script src="https://www.nmu.edu/sites/all/themes/zen/js/html5.js?v1.0"></script>
 	<![endif]-->
 	
 	<script>
@@ -88,25 +88,25 @@
 							<!-- Collect the nav links, forms, and other content for toggling -->
 							<div class="collapse navbar-collapse" id="top-navigation-collapse">
 								<ul class="nav navbar-nav nmu-audience-nav" id="audience-navigation">
-									<li class="toolbar-main-nav"><a class="allcaps" href="/about">About</a></li>
-									<li class="toolbar-main-nav"><a class="allcaps" href="/admissions/applyto">Enroll</a></li>
-									<li class="toolbar-main-nav"><a class="allcaps" href="/academics">Academics</a></li>
-									<li class="toolbar-main-nav"><a class="allcaps" href="/sports">Sports</a></li>
-									<li class="toolbar-main-nav"><a class="allcaps" href="/admissions/life">Campus Life</a></li>
-									<li class="toolbar-home"><a href="/"><span class="glyphicon glyphicon-home" title="NMU Homepage"></span></a></li>
-									<li><a class="allcaps" href="/admissions">Future Students</a></li>
-									<li><a class="allcaps" href="/students">Current Students</a></li>
-									<li><a class="allcaps" href="/facultystaff">Faculty & Staff</a></li>
-									<li><a class="allcaps audience-single-word-nav" href="/friends">Alumni</a></li>
-									<li><a class="allcaps audience-single-word-nav" href="/admissions/visit">Visitors</a></li>
+									<li class="toolbar-main-nav"><a class="allcaps" href="//www.nmu.edu/about">About</a></li>
+									<li class="toolbar-main-nav"><a class="allcaps" href="//www.nmu.edu/admissions/applyto">Enroll</a></li>
+									<li class="toolbar-main-nav"><a class="allcaps" href="//www.nmu.edu/academics">Academics</a></li>
+									<li class="toolbar-main-nav"><a class="allcaps" href="//www.nmu.edu/sports">Sports</a></li>
+									<li class="toolbar-main-nav"><a class="allcaps" href="//www.nmu.edu/admissions/life">Campus Life</a></li>
+									<li class="toolbar-home"><a href="//www.nmu.edu/"><span class="glyphicon glyphicon-home" title="NMU Homepage"></span></a></li>
+									<li><a class="allcaps" href="//www.nmu.edu/admissions">Future Students</a></li>
+									<li><a class="allcaps" href="//www.nmu.edu/students">Current Students</a></li>
+									<li><a class="allcaps" href="//www.nmu.edu/facultystaff">Faculty & Staff</a></li>
+									<li><a class="allcaps audience-single-word-nav" href="//www.nmu.edu/friends">Alumni</a></li>
+									<li><a class="allcaps audience-single-word-nav" href="//www.nmu.edu/admissions/visit">Visitors</a></li>
 								</ul>
 
 								<ul class="nav navbar-nav navbar-right nmu-toolbar-nav">
 									<li><a href="https://mynmu.nmu.edu/">MyNMU</a></li>
-									<li><a class="allcaps" href="/calendar">Events</a></li>
-									<li><a class="allcaps" href="/apply">Apply</a></li>
-									<li><a class="allcaps" href="/atozsearch">A-Z</a></li>
-									<li><a class="allcaps" href="/give/nmumainheader">Give</a></li>
+									<li><a class="allcaps" href="//www.nmu.edu/calendar">Events</a></li>
+									<li><a class="allcaps" href="//www.nmu.edu/apply">Apply</a></li>
+									<li><a class="allcaps" href="//www.nmu.edu/atozsearch">A-Z</a></li>
+									<li><a class="allcaps" href="//www.nmu.edu/give/nmumainheader">Give</a></li>
 									<li class="toolbar-search dropdown yamm-fw"><a class="dropdown-toggle" data-toggle="dropdown" href="#" id="search-icon"><span class="glyphicon glyphicon-search" title="Search NMU"></span></a>
 										<ul class="dropdown-menu dropdown-search yamm-content" role="menu">
 											<li class="dropdown-menu-width-wrapper" id="search-dropdown">
@@ -174,7 +174,7 @@
 			<div class="region region-branding">
 				<div id="block-block-55" class="block block-block first last odd">
 					<div class="branding-logo">
-						<img src="https://www.nmu.edu/Webb/Images/NMULogos/NMU_G_Horizontal_Transparent.png" style="width:500px; height:68px;" alt="NMU Logo" title="Northern Michigan University">
+						<a href="http://www.nmu.edu"><img src="https://www.nmu.edu/Webb/Images/NMULogos/NMU_G_Horizontal_Transparent.png" style="width:500px; height:68px;" alt="NMU Logo" title="Northern Michigan University"></a>
 					</div>
 				</div>
 			</div><!-- /.region-branding -->
@@ -206,22 +206,22 @@
 												<div class="row">
 													<div class="col-sm-3">
 														<ul class="list-unstyled" role="menu">
-															<li><a href="/about">About</a></li>
-															<li><a href="/achievements">Achievements</a></li>
-															<li><a href="/nmucampus">Campus</a></li>
-															<li><a href="/publicsafety/clery-act">Clery Act Statistics</a></li>
-															<li><a href="/hr">Human Resources</a></li>
-															<li><a href="/naturalwonders">Marquette Area</a></li>
+															<li><a href="//www.nmu.edu/about">About</a></li>
+															<li><a href="//www.nmu.edu/achievements">Achievements</a></li>
+															<li><a href="//www.nmu.edu/nmucampus">Campus</a></li>
+															<li><a href="//www.nmu.edu/publicsafety/clery-act">Clery Act Statistics</a></li>
+															<li><a href="//www.nmu.edu/hr">Human Resources</a></li>
+															<li><a href="//www.nmu.edu/naturalwonders">Marquette Area</a></li>
 														</ul>
 													</div>
 													<div class="col-sm-3">
 														<ul class="list-unstyled" role="menu">
 
-															<li><a href="/mission">Mission and Vision</a></li>
-															<li><a href="/profile">People</a></li>
-															<li><a href="/president">President's Office</a></li>
-															<li><a href="/technology">Technology Program</a></li>
-															<li><a href="/tuition">Tuition and Fees</a></li>
+															<li><a href="//www.nmu.edu/mission">Mission and Vision</a></li>
+															<li><a href="//www.nmu.edu/profile">People</a></li>
+															<li><a href="//www.nmu.edu/president">President's Office</a></li>
+															<li><a href="//www.nmu.edu/technology">Technology Program</a></li>
+															<li><a href="//www.nmu.edu/tuition">Tuition and Fees</a></li>
 														</ul>
 													</div>
 													<div class="col-sm-6">
@@ -240,23 +240,23 @@
 												<div class="row">
 													<div class="col-sm-3">
 														<ul class="list-unstyled" role="menu">
-															<li><a href="/admissions">Admissions Office</a></li>
-															<li><a href="/admissions/admitted">Admitted Students</a></li>
-															<li><a href="/admissions/applyto">Apply Online</a></li>
-															<li><a href="/admissions/contactcounselor">Contact a Counselor</a></li>
-															<li><a href="/financialaid">Financial Aid and Scholarships</a></li>
-															<li><a href="/graduatestudies">Graduate Students</a></li>
+															<li><a href="//www.nmu.edu/admissions">Admissions Office</a></li>
+															<li><a href="//www.nmu.edu/admissions/admitted">Admitted Students</a></li>
+															<li><a href="//www.nmu.edu/admissions/applyto">Apply Online</a></li>
+															<li><a href="//www.nmu.edu/admissions/contactcounselor">Contact a Counselor</a></li>
+															<li><a href="//www.nmu.edu/financialaid">Financial Aid and Scholarships</a></li>
+															<li><a href="//www.nmu.edu/graduatestudies">Graduate Students</a></li>
 
 														</ul>
 													</div>
 													<div class="col-sm-3">
 														<ul class="list-unstyled" role="menu">
-															<li><a href="/internationalprograms/international-students">International Students</a></li>
-															<li><a href="/admissions/veterans">Military Veteran Students</a></li>
-															<li><a href="/why/#enough">Request Information</a></li>
-															<li><a href="/transfer">Transfer Students</a></li>
-															<li><a href="/admissions">Undergraduate Students</a></li>
-															<li><a href="/admissions/visit">Visit Us</a></li>
+															<li><a href="//www.nmu.edu/internationalprograms/international-students">International Students</a></li>
+															<li><a href="//www.nmu.edu/admissions/veterans">Military Veteran Students</a></li>
+															<li><a href="//www.nmu.edu/why/#enough">Request Information</a></li>
+															<li><a href="//www.nmu.edu/transfer">Transfer Students</a></li>
+															<li><a href="//www.nmu.edu/admissions">Undergraduate Students</a></li>
+															<li><a href="//www.nmu.edu/admissions/visit">Visit Us</a></li>
 														</ul>
 													</div>
 													<div class="col-sm-6">
@@ -276,18 +276,18 @@
 													<div class="col-sm-3">
 														<ul class="list-unstyled" role="menu">
 															<li><a href="//it.nmu.edu/">Academic Computing</a></li>
-															<li><a href="/bulletin">Course Catalog</a></li>
+															<li><a href="//www.nmu.edu/bulletin">Course Catalog</a></li>
 															<li><a href="https://educat.nmu.edu">EduCat</a></li>
-															<li><a href="/gradbulletin">Graduate Course Catalog</a></li>
-															<li><a href="/graduatestudies/programs">Graduate Programs</a></li>
+															<li><a href="//www.nmu.edu/gradbulletin">Graduate Course Catalog</a></li>
+															<li><a href="//www.nmu.edu/graduatestudies/programs">Graduate Programs</a></li>
 														</ul>
 													</div>
 													<div class="col-sm-3">
 														<ul class="list-unstyled" role="menu">
-															<li><a href="/grantsandresearch">Grants and Research</a></li>
+															<li><a href="//www.nmu.edu/grantsandresearch">Grants and Research</a></li>
 															<li><a href="http://library.nmu.edu/">Library</a></li>
-															<li><a href="/programs">Majors and Minors</a></li>
-															<li><a href="/internationalprograms">Study Abroad</a></li>
+															<li><a href="//www.nmu.edu/programs">Majors and Minors</a></li>
+															<li><a href="//www.nmu.edu/internationalprograms">Study Abroad</a></li>
 														</ul>
 													</div>
 													<div class="col-sm-6">
@@ -309,13 +309,13 @@
 													</div>
 													<div class="col-sm-3">
 														<ul class="list-unstyled" role="menu">
-															<li><a href="/sports/schedule">Complete Athletics Schedule</a></li>
+															<li><a href="//www.nmu.edu/sports/schedule">Complete Athletics Schedule</a></li>
 															<li><a href="http://www.nmuwildcats.com/">Intercollegiate Athletics</a></li>
-															<li><a href="/sportsrecsports/">Recreational Sports</a></li>
+															<li><a href="//www.nmu.edu/sportsrecsports/">Recreational Sports</a></li>
 															<li><a href="http://www.nmuwildcats.com/information/SportCamps">Sports Camps</a></li>
-															<li><a href="/tickets">Tickets</a></li>
-															<li><a href="/sportsusoec">U.S. Olympic Training Site</a></li>
-															<li><a href="/wellness">Wellness</a></li>
+															<li><a href="//www.nmu.edu/tickets">Tickets</a></li>
+															<li><a href="//www.nmu.edu/sportsusoec">U.S. Olympic Training Site</a></li>
+															<li><a href="//www.nmu.edu/wellness">Wellness</a></li>
 														</ul>
 													</div>
 												</div>
@@ -335,19 +335,19 @@
 													<div class="col-sm-3">
 														<ul class="list-unstyled" role="menu">
 															<li><a href="http://www.nmubookstore.com/">Bookstore</a></li>
-															<li><a href="/studentenrichment">Center for Student Enrichment</a></li>
-															<li><a href="/dso">Dean of Students</a></li>
-															<li><a href="/dining">Dining Services</a></li>
-															<li><a href="/healthcenter">Health Center</a></li>
-															<li><a href="/housing">Housing</a></li>
+															<li><a href="//www.nmu.edu/studentenrichment">Center for Student Enrichment</a></li>
+															<li><a href="//www.nmu.edu/dso">Dean of Students</a></li>
+															<li><a href="//www.nmu.edu/dining">Dining Services</a></li>
+															<li><a href="//www.nmu.edu/healthcenter">Health Center</a></li>
+															<li><a href="//www.nmu.edu/housing">Housing</a></li>
 														</ul>
 													</div>
 													<div class="col-sm-3">
 														<ul class="list-unstyled" role="menu">
-															<li><a href="/internationalprograms">International Programs</a></li>
-															<li><a href="/calendar">Master Calendar</a></li>
-															<li><a href="/multiculturaledandres">Multicultural Education and Resource Center</a></li>
-															<li><a href="/organizations">Student Organizations</a></li>
+															<li><a href="//www.nmu.edu/internationalprograms">International Programs</a></li>
+															<li><a href="//www.nmu.edu/calendar">Master Calendar</a></li>
+															<li><a href="//www.nmu.edu/multiculturaledandres">Multicultural Education and Resource Center</a></li>
+															<li><a href="//www.nmu.edu/organizations">Student Organizations</a></li>
 														</ul>
 													</div>
 												</div>
@@ -399,14 +399,14 @@
 				<div class="footer-main">
 					<h4>Northern Michigan University</h4>
 					<p>1401 Presque Isle Ave. <span class="bullet">&bull;</span> Marquette, MI 49855-5301 <span class="bullet">&bull;</span> 906&ndash;227&ndash;1000</p>
-					<p>&copy; <script>document.write(new Date().getFullYear())</script> by the <a href="/board">NMU Board of Trustees</a>. NMU is an <a href="/equalop">equal opportunity institution</a>.</p>
+					<p>&copy; <script>document.write(new Date().getFullYear())</script> by the <a href="//www.nmu.edu/board">NMU Board of Trustees</a>. NMU is an <a href="//www.nmu.edu/equalop">equal opportunity institution</a>.</p>
 					<hr>
 					<nav>
 						<ul>
 							<li><a href="mailto:admiss@nmu.edu">Admissions Questions</a></li>
-							<li><a href="/contactus">Contact Us</a></li>
-							<li><a href="/communicationsandmarketing/PrivacyStatement">Privacy Statement</a></li>
-							<li><a href="/emergency">Emergency Information</a></li>
+							<li><a href="//www.nmu.edu/contactus">Contact Us</a></li>
+							<li><a href="//www.nmu.edu/mc/PrivacyStatement">Privacy Statement</a></li>
+							<li><a href="//www.nmu.edu/emergency">Emergency Information</a></li>
 						</ul>
 					</nav>
 				</div> <!-- /.footer-main -->
